// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Button] renders without crashing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    clickable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="button"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#0000ff",
            "borderRadius": 4,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "width": 320,
          },
          Object {},
        ]
      }
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#0000ff",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "left": 0,
              "position": "absolute",
            },
          ]
        }
        testID="iconLeft"
      />
      <Text
        style={
          Array [
            Object {
              "color": "#069ccd",
              "fontSize": 14,
            },
            Object {},
          ]
        }
        testID="text"
        theme={
          Object {
            "fontColor": "#069ccd",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "right": 0,
            },
          ]
        }
        testID="iconRight"
      />
    </View>
  </View>
</View>
`;

exports[`[Button] renders without crashing when to children is not empty 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    clickable={false}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="button"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#0000ff",
            "borderRadius": 4,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "width": 320,
          },
          Object {},
        ]
      }
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#0000ff",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "left": 0,
              "position": "absolute",
            },
          ]
        }
        testID="iconLeft"
      />
      <Text>
        Sample text
      </Text>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "right": 0,
            },
          ]
        }
        testID="iconRight"
      />
    </View>
  </View>
</View>
`;
